Added MAP and example point

--- a/VesselMap/angular.json
+++ b/VesselMap/angular.json
@@ -30,7 +30,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/ol/ol.css"
             ],
             "scripts": []
           },
@@ -100,5 +101,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "1d4e872a-ba92-42d6-ba08-8ce7a02c9a35"
   }
 }
